# chemstats

./: README.md  pyproject.toml
src/chemstats/: ExternalStandard.py  __init__.py  main.py
src/chemstats/example/: external_standard.py
